--- a/PiedraPepelTijera/PiedraPepelTijera.vcxproj.filters
+++ b/PiedraPepelTijera/PiedraPepelTijera.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="game\view\SelectPcOptionView\SelectPcOptionView.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="game\helpers\ShowElementsName\ShowElementsName.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game\view\SelectPlayerOptionView.h">
@@ -42,6 +45,12 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="game\view\SelectPcOptionView\SelectPcOptionView.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="game\data\Elements.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="game\helpers\ShowElementsName\ShowElementsName.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
