--- a/PiedraPepelTijera/PiedraPepelTijera.vcxproj.filters
+++ b/PiedraPepelTijera/PiedraPepelTijera.vcxproj.filters
@@ -18,10 +18,10 @@
     <ClCompile Include="PiedraPepelTijera.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="game\view\SelectPlayerOptionView.cpp">
+    <ClCompile Include="game\view\SelectPlayerOptionView\SelectPlayerOptionView.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="game\helpers\ShowErrosMsg.cpp">
+    <ClCompile Include="game\helpers\ShowErrorMsg\ShowErrorMsg.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
     <ClCompile Include="game\model\SelectPcOption\SelectPcOption.cpp">
@@ -35,10 +35,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="game\view\SelectPlayerOptionView.h">
+    <ClInclude Include="game\view\SelectPlayerOptionView\SelectPlayerOptionView.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="game\helpers\ShowErrosMsg.h">
+    <ClInclude Include="game\helpers\ShowErrorMsg\ShowErrorMsg.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="game\model\SelectPcOption\SelectPcOption.h">
