feat: update main with the new functions and procedurals

--- a/PiedraPepelTijera/PiedraPepelTijera.vcxproj
+++ b/PiedraPepelTijera/PiedraPepelTijera.vcxproj
@@ -128,9 +128,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="game\helpers\ShowErrorMsg\ShowErrorMsg.cpp" />
-    <ClCompile Include="game\model\DetermineWinner\DetermineWinner.cpp" />
+    <ClCompile Include="game\model\DetermineGameWinner\DetermineGameWinner.cpp" />
+    <ClCompile Include="game\model\DetermineRoundWinner\DetermineRoundWinner.cpp" />
     <ClCompile Include="game\model\SelectPcOption\SelectPcOption.cpp" />
-    <ClCompile Include="game\view\DetermineWinnerView\DetermineWinnerView.cpp" />
+    <ClCompile Include="game\view\DetermineGameWinnerView\DetermineGameWinnerView.cpp" />
+    <ClCompile Include="game\view\DetermineRoundWinnerView\DetermineRoundWinnerView.cpp" />
     <ClCompile Include="game\view\SelectPcOptionView\SelectPcOptionView.cpp" />
     <ClCompile Include="game\view\SelectPlayerOptionView\SelectPlayerOptionView.cpp" />
     <ClCompile Include="game\helpers\ShowElementsName\ShowElementsName.cpp" />
@@ -139,9 +141,11 @@
   <ItemGroup>
     <ClInclude Include="game\data\Elements.h" />
     <ClInclude Include="game\helpers\ShowErrorMsg\ShowErrorMsg.h" />
-    <ClInclude Include="game\model\DetermineWinner\DetermineWinner.h" />
+    <ClInclude Include="game\model\DetermineGameWinner\DetermineGameWinner.h" />
+    <ClInclude Include="game\model\DetermineRoundWinner\DetermineRoundWinner.h" />
     <ClInclude Include="game\model\SelectPcOption\SelectPcOption.h" />
-    <ClInclude Include="game\view\DetermineWinnerView\DetermineWinnerView.h" />
+    <ClInclude Include="game\view\DetermineGameWinnerView\DetermineGameWinnerView.h" />
+    <ClInclude Include="game\view\DetermineRoundWinnerView\DetermineRoundWinnerView.h" />
     <ClInclude Include="game\view\SelectPcOptionView\SelectPcOptionView.h" />
     <ClInclude Include="game\view\SelectPlayerOptionView\SelectPlayerOptionView.h" />
     <ClInclude Include="game\helpers\ShowElementsName\ShowElementsName.h" />
